; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msxml3/extr_saxreader.c_init_saxdeclhandler.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msxml3/extr_saxreader.c_init_saxdeclhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.saxdeclhandler = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@SAXDeclHandlerVtbl = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.saxdeclhandler*, i32)* @init_saxdeclhandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_saxdeclhandler(%struct.saxdeclhandler* %0, i32 %1) #0 {
  %3 = alloca %struct.saxdeclhandler*, align 8
  %4 = alloca i32, align 4
  store %struct.saxdeclhandler* %0, %struct.saxdeclhandler** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.saxdeclhandler*, %struct.saxdeclhandler** %3, align 8
  %6 = getelementptr inbounds %struct.saxdeclhandler, %struct.saxdeclhandler* %5, i32 0, i32 2
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32* @SAXDeclHandlerVtbl, i32** %7, align 8
  %8 = load %struct.saxdeclhandler*, %struct.saxdeclhandler** %3, align 8
  %9 = getelementptr inbounds %struct.saxdeclhandler, %struct.saxdeclhandler* %8, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.saxdeclhandler*, %struct.saxdeclhandler** %3, align 8
  %12 = getelementptr inbounds %struct.saxdeclhandler, %struct.saxdeclhandler* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
